--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,6 +27,7 @@ en:
     messaging:
       conversations:
         show:
+          anonymous_account: You cannot have a conversation with an anonymous participant.
           private_account: You cannot have a conversation with a private participant.
           private_messaging_disabled: You cannot have a conversation with a participant that has private messaging disabled.
           private_messaging_disabled_new: You cannot start a conversation with a participant that has private messaging disabled.
@@ -44,11 +45,28 @@ en:
         back: Previous page
       privacy_settings:
         show:
-          profile_publicity_html: |
+          profile_publicity_intro_anonymous_html: |
             <p>
               These privacy settings allow you to control how you appear on this platform publicly. You can decide to
-              remain completely anonymous but it will limit what you can do on this platform.
+              remain completely anonymous but it will limit the information others can see about you, if you choose to
+              be private instead of anonymous it will limit what you can do on this platform.
             </p>
+            <h2 class="heading5 h5">Anonymity</h2>
+            <p>
+              Making your account anonymous still allows you to perform public activities on this platform, such as
+              sending comments, participating in discussions, creating proposals, etc.
+            </p>
+            <p>
+              While being anonymous, other participants cannot see your name, or other public information, such as your
+              nickname or profile photo (avatar), your public activity on this platform, your followers or who you
+              follow. Your public profile page is also inaccessible and you cannot be found through the search of Decidim.
+            </p>
+          profile_publicity_intro_private_html: |
+            <p>
+              These privacy settings allow you to control how you appear on this platform publicly. You can decide to
+              remain completely private but it will limit what you can do on this platform.
+            </p>
+          profile_publicity_html: |
             <h2 class="heading3 h3 pt-4">Profile publicity</h2>
             <p class="pt-4">
               Making your profile public allows you to perform public activities on this platform, such as sending
@@ -67,6 +85,7 @@ en:
               order to enable this feature because other people need to find you on this platform in order to have a
               conversation with you.
             </p>
+          enable_anonymity: Enable anonymity
           enable_public_profile: Enable public profile
           public_profile: I want my profile to be public to other users.
           enable_private_messaging: Enable private messaging
@@ -78,21 +97,46 @@ en:
           error: There was a problem updating your privacy settings.
           success: Your privacy settings were successfully updated.
       privacy_block:
-        title: Public profile is required for this action
-        content_html: |
-          <p class="text-lg">
-            You are trying to access a page which requires your profile to be public. Making your profile public allows
-            other participants to see information about you.
-          </p>
-          <p class="text-lg py-4">
-            <strong>
-              Additional information about making your profile public will be presented after clicking the button below.
-            </strong>
-          </p>
-        button: "Publish your profile"
+        private:
+          title: Public profile is required for this action
+          content_html: |
+            <p class="text-lg">
+              You are trying to access a page which requires your profile to be public. Making your profile public allows
+              other participants to see information about you.
+            </p>
+            <p class="text-lg py-4">
+              <strong>
+                Additional information about making your profile public will be presented after clicking the button below.
+              </strong>
+            </p>
+          button: "Publish your profile"
+        anonymous:
+          title: Your profile is anonymous
+          content_html: |
+            <p class="text-center">
+              You are entering a page anonymously. If you want other participants to see information about you,
+              you can also make your profile public.
+            </p>
+            <p class="text-center">
+              <strong>
+                Additional information about making your profile public will be presented after clicking the button below.
+              </strong>
+            </p>
+          button: "Continue"
       private_account:
         unnamed_user: Unnamed participant
       partials:
+        anonymity_prompt:
+          title: Profile publicity
+          close_modal: Close
+          content_html: |
+            <p>
+              Your profile on this platform is anonymous by default. The ideas and comments you post will
+              appear as anonymous to others. If you want to act publicly, select the option "I want my profile
+              to be public" below.
+            </p>
+          continue: Continue anonymous
+          publicize: I want my profile to be public
         privacy_consent:
           make_profile_public: Make your profile public
           content_html: |
@@ -123,6 +167,7 @@ en:
           agree_to_public_profile: I agree that a public profile is created about me
           do_not_agree: No, I do not want to make my profile public
           profile_settings: Profile settings
+          continue_anonymous: No, I do not want to make my profile public, continue anonymous.
       publish_account:
         unauthorized: Only participants with public profiles are allowed to perform this action.
       groups:
@@ -131,8 +176,10 @@ en:
         verify:
           email_confirmation: The group's email address has to be confirmed in order to verify the group.
     profile:
+      anonymous: Anonymous participant
+      anonymous_info_html: <i>This participant has decided to make their profile anonymous. New messages to this conversation have been therefore disabled.</i>
       private: Private participant
-      private_info_html: This participant has decided to make their profile private. New messages to this conversation have been therefore disabled.
+      private_info_html: <i>This participant has decided to make their profile private. New messages to this conversation have been therefore disabled.</i>
   devise:
     passwords:
       edit:
