--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -27,6 +27,7 @@ fi:
     messaging:
       conversations:
         show:
+          anonymous_account: Et voi keskustella anonyymien osallistujien kanssa.
           private_account: Et voi keskustella yksityisten osallistujien kanssa.
           private_messaging_disabled: Et voi keskustella sellaisen osallistujan kanssa, joka on estänyt yksityisviestit.
           private_messaging_disabled_new: Et voi aloittaa keskustelua sellaisen osallistujan kanssa, joka on estänyt yksityisviestit.
@@ -44,11 +45,28 @@ fi:
         back: Edellinen sivu
       privacy_settings:
         show:
-          profile_publicity_html: |
+          profile_publicity_intro_html: |
             <p>
-              Näiden yksityisyysasetusten avulla voit hallita, kuinka esiinnyt tällä alustalla. Voit pysyä täysin anonyymina,
-              mutta se rajoittaa, mitä voit tehdä tällä alustalla.
+              Näiden yksityisyysasetusten avulla voi hallita, kuinka esiinnyt tällä alustalla. Voit pysyä täysin anonyyminä,
+              mutta se rajoittaa, mitä tietoja muut voivat sinusta nähdä. Jos päätät asettaa profiilisi yksityiseksi,
+              se rajoittaa mitä voit tehdä tällä alustalla.
             </p>
+            <h2 class="heading5 h5">Anonyymisyys</h2>
+            <p>
+              Profiilin anonyymisyys sallii tiettyjen julkisten toimintojen suorittamisen tällä alustalla, kuten
+              kommentoinnin, keskusteluihin osallistumisen, ehdotusten tekemisen, jne.
+            </p>
+            <p>
+              Kun profiilisi on anonyymi, muut osallistujat eivät voi nähdä nimeäsi tällä alustalla, tai muuta julkista
+              tietoa. Kuten nimimerkkiäsi, profiilikuvaasi, toimintaasi tällä alustalla, seuraajiasi tai ketä itse
+              seuraat. Myös profiilisivusi on piilotettu, eikä sinua voida löytää alustan hakukentästä.
+            </p>
+          profile_publicity_intro_private_html: |
+            <p>
+              Näiden yksityisyysasetusten avulla voit hallita, kuinka esiinnyt tällä alustalla. Voit pysyä täysin anonyyminä,
+              mutta se rajoittaa mitä voit tehdä tällä alustalla.
+            </p>
+          profile_publicity_html: |
             <h2 class="heading3 h3 pt-4">Profiilin julkisuus</h2>
             <p class="pt-4">
               Profiilin julkaiseminen mahdollistaa tiettyjen julkisten toimintojen suorittamisen tällä alustalla, kuten
@@ -67,6 +85,7 @@ fi:
               asetuksen käyttöönottoa varten, koska muiden osallistujien on löydettävä sinut tältä alustalta
               keskustellakseen kanssasi.
             </p>
+          enable_anonymity: Salli anonyymisyys
           enable_public_profile: Ota julkinen profiili käyttöön
           public_profile: Julkinen profiili.
           enable_private_messaging: Ota yksityisviestit käyttöön
@@ -78,21 +97,45 @@ fi:
           error: Yksityisyysasetusten päivittäminen epäonnistui.
           success: Yksityisyysasetusten päivitys onnistui.
       privacy_block:
-        title: Profiilisi tulee olla julkinen suorittaaksesi tämän toiminnon
-        content_html: |
-          <p class="text-lg">
-            Yrität päästä sivulle, joka vaatii julkisen profiilin. Profiilisi julkaiseminen sallii
-            muiden osallistujien nähdä sinua koskevia tietoja.
-          </p>
-          <p class="text-lg py-4">
-            <strong>
-              Saat lisätietoja profiilisi julkaisemisesta alla olevan painikkeen painamisen jälkeen.
-            </strong>
-          </p>
-        button: "Julkaise profiilisi"
+        private:
+          title: Profiilisi tulee olla julkinen suorittaaksesi tämän toiminnon
+          content_html: |
+            <p class="text-lg">
+              Yrität päästä sivulle, joka vaatii julkisen profiilin. Profiilisi julkaiseminen sallii
+              muiden osallistujien nähdä sinua koskevia tietoja.
+            </p>
+            <p class="text-lg py-4">
+              <strong>
+                Saat lisätietoja profiilisi julkaisemisesta alla olevan painikkeen painamisen jälkeen.
+              </strong>
+            </p>
+          button: "Julkaise profiilisi"
+        anonymous:
+          title: Profiilisi on anonyymi
+          content_html: |
+            <p class="text-center">
+              Olet siirtymässä sivulle anonyymina. Jos haluat muiden käyttäjien näkevän tietoja sinusta, voit myös
+              tehdä profiilistasi julkisen.
+            </p>
+            <p class="text-center">
+              <strong>
+                Saat lisätietoja profiilisi julkaisemisesta alla olevan painikkeen painamisen jälkeen.
+              </strong>
+            </p>
+          button: "Jatka"
       private_account:
         unnamed_user: Nimetön osallistuja
       partials:
+        anonymity_prompt:
+          title: Profiilin julkisuus
+          close_modal: Sulje
+          content_html: |
+            <p>
+              Profiilisi on oletuksena anonyymi tällä alustalla. Julkaisemasi ideat ja kommentit näkyvät muille
+              anonyymeinä. Jos haluat toimia julkisesti, valitse vaihtoehto "Haluan, että profiilini on julkinen".
+            </p>
+          continue: Jatka anonyyminä
+          publicize: Haluan profiilini olevan julkinen
         privacy_consent:
           make_profile_public: Tee profiilistasi julkinen
           content_html: |
@@ -121,9 +164,12 @@ fi:
           agree_to_public_profile: Hyväksyn, että minusta luodaan julkinen profiili
           do_not_agree: Ei, en halua tehdä profiilistani julkista
           profile_settings: Profiilin asetukset
+          continue_anonymous: En halua profiilistani julkista, jatka anonyyminä
       publish_account:
         unauthorized: Vain julkiset osallistujat voivat suorittaa tämän toiminnon.
     profile:
+      anonymous: Anonyymi osallistuja
+      anonymous_info_html: <i>Tämä osallistuja on päättänyt tehdä profiilistaan anonyymin. Uudet viestit tähän keskusteluun on siksi poistettu käytöstä.</i>
       private: Yksityinen osallistuja
       private_info_html: <i>Tämä osallistuja on päättänyt tehdä profiilistaan yksityisen. Uudet viestit tähän keskusteluun on siksi poistettu käytöstä.</i>
   devise:
