Add help text to proposal creation as yourself or user group if anonymous / Fix author cell styles

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -180,6 +180,11 @@ en:
       anonymous_info_html: <i>This participant has decided to make their profile anonymous. New messages to this conversation have been therefore disabled.</i>
       private: Private participant
       private_info_html: <i>This participant has decided to make their profile private. New messages to this conversation have been therefore disabled.</i>
+    proposals:
+      proposals:
+        help:
+          anonymous_user: Your profile is anonymous. If proposal is created as yourself instead of a user group, your name will be hidden
+                          until you publicize your profile.
   devise:
     passwords:
       edit:
