--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -14,7 +14,8 @@ fi:
         message: "Profiilisi on asetettu julkiseksi tällä alustalla ja muut ihmiset voivat nähdä sinua koskevia tietoja, kuten nimesi, nimimerkkisi, profiilikuvasi ja julkisen toimintasi tällä alustalla. Voit muuttaa profiilisi näkyvyyttä yksityisyysasetuksista. Profiilisi löytyy osoitteesta:"
       shared:
         layout_two_col:
-          private_account: Yksityinen tili
+          anonymous_account: Et voi keskustella anonyymien osallistujien kanssa.
+          private_account: Et voi keskustella yksityisten osallistujien kanssa.
         layout_center:
           enable_anonymity: Salli anonyymisyys
           profile_publicity_intro_anonymous_html: |
@@ -53,8 +54,6 @@ fi:
     messaging:
       conversations:
         show:
-          anonymous_account: Et voi keskustella anonyymien osallistujien kanssa.
-          private_account: Et voi keskustella yksityisten osallistujien kanssa.
           private_messaging_disabled: Et voi keskustella sellaisen osallistujan kanssa, joka on estänyt yksityisviestit.
           private_messaging_disabled_new: Et voi aloittaa keskustelua sellaisen osallistujan kanssa, joka on estänyt yksityisviestit.
           private_messaging_disabled_new_multiple: Yhdellä tai useammalla tämän keskustelun osanottajalla on yksityisviestit pois käytöstä, minkä vuoksi keskustelua ei voi aloittaa.
@@ -65,7 +64,7 @@ fi:
       message_block:
         title: Yksityisviestit eivät ole käytössä
         content_html: |
-          <p class="text-lg pb-4">
+          <p class="text-center pb-4">
             Käyttääksesi tätä toimintoa, sinun täytyy ottaa yksityisviestit käyttöön tilisi asetusten alta löytyvien "yksityisyysasetusten" kautta.
           </p>
         back: Edellinen sivu
