--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -149,7 +149,7 @@ en:
               appear as anonymous to others. If you want to act publicly, select the option "I want my profile
               to be public" below.
             </p>
-          continue: Continue anonymous
+          continue: Continue anonymously
           publicize: I want my profile to be public
         privacy_consent:
           make_profile_public: Make your profile public
@@ -181,7 +181,7 @@ en:
           agree_to_public_profile: I agree that a public profile is created about me
           do_not_agree: No, I do not want to make my profile public
           profile_settings: Profile settings
-          continue_anonymous: No, I do not want to make my profile public, continue anonymous.
+          continue_anonymous: No, I do not want to make my profile public, continue anonymously.
       publish_account:
         unauthorized: Only participants with public profiles are allowed to perform this action.
       groups:
